--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/northcoders/be-nc-news.git"
+    "url": "git+https://github.com/Mielie/NewsAppBackEnd.git"
   },
   "keywords": [],
   "author": "",
@@ -28,7 +28,9 @@
   },
   "dependencies": {
     "dotenv": "^16.0.0",
-    "pg": "^8.7.3"
+    "express": "^4.18.2",
+    "pg": "^8.7.3",
+    "supertest": "^6.3.3"
   },
   "jest": {
     "setupFilesAfterEnv": [
